--- a/sdk/src/main/res/values-en/strings.xml
+++ b/sdk/src/main/res/values-en/strings.xml
@@ -211,4 +211,8 @@
     <string name="mpsdk_review_product_price">Unit price: %1$s</string>
     <string name="mpsdk_activity_checkout_title">Confirm your purchase</string>
     <string name="mpsdk_review_summary_products">Products</string>
+
+    <!-- Discount -->
+    <string name="mpsdk_has_a_discount">I have a discount</string>
+
 </resources>
