--- a/sdk/src/main/res/values-en/strings.xml
+++ b/sdk/src/main/res/values-en/strings.xml
@@ -213,6 +213,7 @@
     <string name="mpsdk_review_summary_products">Products</string>
 
     <!-- Discount -->
+    <string name="mpsdk_discount">Discount</string>
     <string name="mpsdk_input_button_exchange">Exchange</string>
     <string name="mpsdk_discount_code">Discount code</string>
     <string name="mpsdk_has_a_discount">I have a discount</string>
