--- a/sdk/src/main/res/values-en/strings.xml
+++ b/sdk/src/main/res/values-en/strings.xml
@@ -196,7 +196,7 @@
     <string name="mpsdk_change_payment">Change payment</string>
     <string name="mpsdk_review_description_card">%1$s ending in: %2$s</string>
     <string name="mpsdk_your_atm">ATM of</string>
-    <string name="mpsdk_review_summary_discount">Discounts</string>
+    <string name="mpsdk_review_summary_discount">Discount</string>
     <string name="mpsdk_review_summary_discounts">Discount of %1$s</string>
     <string name="mpsdk_review_off_text_default">You will pay %1$s\n%2$s</string>
     <string name="mpsdk_review_off_text">You will pay %1$s in a\n%2$s</string>
