--- a/sdk/src/main/res/values-pt/strings.xml
+++ b/sdk/src/main/res/values-pt/strings.xml
@@ -205,11 +205,11 @@
     <string name="mpsdk_review_product_price">Preço unitário: %1$s</string>
     <string name="mpsdk_activity_checkout_title">Confirme a sua compra</string>
     <string name="mpsdk_review_summary_products">Produtos</string>
-    <string name="mpsdk_review_symmary_discount">Descontos</string>
-    <string name="mpsdk_review_summary_discounts">Desconto %1$s</string>
     <string name="mpsdk_review_summary_subtotal">Subtotal</string>
     <string name="mpsdk_review_summary_pay">Você paga</string>
     <string name="mpsdk_review_summary_total">Total</string>
+    <string name="mpsdk_review_summary_discount_with_percent_off">Desconto %1$s</string>
+    <string name="mpsdk_review_summary_discount_with_amount_off">Desconto</string>
 
     <!-- Discount -->
     <string name="mpsdk_discount">Desconto</string>
@@ -218,5 +218,6 @@
     <string name="mpsdk_has_a_discount">Tenho um desconto</string>
     <string name="mpsdk_of_discount">de desconto</string>
     <string name="mpsdk_percent_of_discount">% de desconto</string>
+    <string name="mpsdk_do_not_enter_code">O codigo não foi digitado</string>
 
 </resources>
