--- a/sdk/src/main/res/values/strings.xml
+++ b/sdk/src/main/res/values/strings.xml
@@ -209,11 +209,11 @@
     <string name="mpsdk_activity_checkout_title">Confirma tu compra</string>
     <string name="mpsdk_review_summary_products">Productos</string>
     <string name="mpsdk_review_summary_discount">Descuentos</string>
-    <string name="mpsdk_review_summary_discount_with_percent_off">Descuento %1$s%%</string>
-    <string name="mpsdk_review_summary_discount_with_amount_off">Descuento</string>
     <string name="mpsdk_review_summary_subtotal">Subtotal</string>
     <string name="mpsdk_review_summary_pay">Pagas</string>
     <string name="mpsdk_review_summary_total">Total</string>
+    <string name="mpsdk_review_summary_discount_with_percent_off">Descuento %1$s%%</string>
+    <string name="mpsdk_review_summary_discount_with_amount_off">Descuento</string>
 
     <!-- Discount -->
     <string name="mpsdk_discount">Descuento</string>
@@ -222,5 +222,6 @@
     <string name="mpsdk_has_a_discount">Tengo un descuento</string>
     <string name="mpsdk_of_discount">de descuento</string>
     <string name="mpsdk_percent_of_discount">% de descuento</string>
+    <string name="mpsdk_do_not_enter_code">No se ingresó código</string>
 
 </resources>
