--- a/sdk/src/main/res/values/strings.xml
+++ b/sdk/src/main/res/values/strings.xml
@@ -208,10 +208,10 @@
     <string name="mpsdk_review_product_price">Precio unitario: %1$s</string>
     <string name="mpsdk_activity_checkout_title">Confirma tu compra</string>
     <string name="mpsdk_review_summary_products">Productos</string>
-    <string name="mpsdk_review_summary_discount">Descuentos</string>
     <string name="mpsdk_review_summary_subtotal">Subtotal</string>
     <string name="mpsdk_review_summary_pay">Pagas</string>
     <string name="mpsdk_review_summary_total">Total</string>
+    <string name="mpsdk_review_summary_discount">Descuento</string>
     <string name="mpsdk_review_summary_discount_with_percent_off">Descuento %1$s%%</string>
     <string name="mpsdk_review_summary_discount_with_amount_off">Descuento</string>
 
