--- a/sdk/src/main/res/values-pt/strings.xml
+++ b/sdk/src/main/res/values-pt/strings.xml
@@ -219,6 +219,10 @@
     <string name="mpsdk_has_a_discount">Tenho um desconto</string>
     <string name="mpsdk_of_discount">de desconto</string>
     <string name="mpsdk_percent_of_discount">% de desconto</string>
-    <string name="mpsdk_do_not_enter_code">O codigo não foi digitado</string>
+    <string name="mpsdk_do_not_enter_code">O código não foi digitado</string>
+    <string name="mpsdk_invalid_code">Código inválido</string>
+    <string name="mpsdk_merchant_without_discount_available">Vendedor não tem desconto disponíveis</string>
+    <string name="mpsdk_discount_run_out_of_uses_quantity">O número de pedidos esgotados</string>
+    <string name="mpsdk_amount_doesnt_match">Montante fora do alcance</string>
 
 </resources>
