--- a/sdk/src/main/res/values-pt/strings.xml
+++ b/sdk/src/main/res/values-pt/strings.xml
@@ -206,7 +206,7 @@
     <string name="mpsdk_review_summary_products">Produtos</string>
     <string name="mpsdk_review_summary_subtotal">Subtotal</string>
     <string name="mpsdk_review_summary_pay">Você paga</string>
-    <string name="mpsdk_review_summary_total">Total:</string>
+    <string name="mpsdk_review_summary_total">Total</string>
     <string name="mpsdk_review_summary_discount">Desconto</string>
     <string name="mpsdk_review_summary_discount_with_percent_off">Desconto %1$s%%</string>
     <string name="mpsdk_review_summary_discount_with_amount_off">Desconto</string>
@@ -225,4 +225,5 @@
     <string name="mpsdk_amount_doesnt_match">Montante fora do alcance</string>
     <string name="mpsdk_campaign_expired">Campanha expirado</string>
     <string name="mpsdk_discount_percent_off">%1$s %%</string>
+    <string name="mpsdk_total">Total:</string>
 </resources>
